apps/autocorp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autocorp
  labels:
    name: autocorp
